--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap-icons-vue": "^1.10.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
